infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-service
  namespace: default
  labels:
    app: mock-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mock-service
  template:
    metadata:
      labels:
        app: mock-service
    spec:
      containers:
        - name: mock-service
          image: 412868037234.dkr.ecr.us-east-1.amazonaws.com/cicd-tests:0.14.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /sensor-data/first
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
