infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: mock-service
  ports:
    - name: http
      port: 80
      targetPort: 80
